--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <meta charset="UTF-8">
 <title>예제</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<section class="conA">
+    <div class="container">
+        <h1>LOGGER</h1>
+        <p>맛있고 즐거운 라이프로그</p>
+    </div>    
+</section>
 </body>
 </html>
