--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <section class="conA">
     <div class="container">
+        <img src="img/logo.svg" alt="">
         <h1>LOGGER</h1>
         <p>맛있고 즐거운 라이프로그</p>
     </div>    
