--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <img src="img/logo.svg" alt="">
         <h1>LOGGER</h1>
         <p>맛있고 즐거운 라이프로그</p>
+        <a href="#">라이프로그 시작하기</a>
     </div>    
 </section>
 </body>
