--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<script src="https://kit.fontawesome.com/ef4e3333ff.js"></script>
 </head>
 <body>
 <section class="conA">
@@ -14,7 +15,32 @@
         <h1>LOGGER</h1>
         <p>맛있고 즐거운 라이프로그</p>
         <a href="#">라이프로그 시작하기</a>
-    </div>    
+    </div>   
+</section>
+<section class="conB">
+    <div class="container">
+        <div class="text">
+            <span class="fa fa-chart-bar icon" aria-hidden="true"></span>
+            <h2>라이프로그란?</h2>
+            <p>일상의 이런저런 것들을 기록하다 보면 보이지 않던 소중한 것들이 보입니다.</p>
+            <a href="#">MORE...</a>
+            <span class="fa fa-chevron-right" aria-hidden="true"></span>
+        </div>
+        <div class="text">
+            <span class="fa fa-cogs icon" aria-hidden="true"></span>
+            <h2>스마트폰이 있다면</h2>
+            <p>스마트폰이 있다면 언제라도 라이프로그를 시작할 수 있습니다.</p>
+            <a href="#">MORE...</a>
+            <span class="fa fa-chevron-right" aria-hidden="true"></span>
+        </div>
+        <div class="text">
+            <span class="fa fa-rocket icon" aria-hidden="true"></span>
+            <h2>SNS와의 연동</h2>
+            <p>Twitter와 Facebook 등의 SNS와 연동해서 로그를 간단하게 공유할 수 있습니다.</p>
+            <a href="#">MORE...</a>
+            <span class="fa fa-chevron-right" aria-hidden="true"></span>
+        </div>
+    </div>
 </section>
 </body>
 </html>
