--- a/index.html
+++ b/index.html
@@ -42,5 +42,17 @@
         </div>
     </div>
 </section>
+<section class="conC">
+    <div class="container">
+        <div class="photo"></div>
+        <div class="text">
+            <h2>귀찮은 설정과 데이터 관리를 하지 않아도 됩니다</h2>
+            <p>라이프로그에서는 귀찮은 설정과 데이터 관리를 따로 하지 않아도 됩니다. 다른 애플리케이션과의 연동도 버튼 하나만 누르면 됩니다.</p>
+            <a href="#">자세한 설정 방법 살펴보기
+                <span class="fa fa-chevron-right"></span>
+            </a>
+        </div>
+    </div>
+</section>
 </body>
 </html>
