--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
 <script src="https://kit.fontawesome.com/ef4e3333ff.js"></script>
 </head>
 <body>
+<header>
+    <div class="container">
+        <a href="index.html" class="headA">
+            EASTLEAD LOGGER
+        </a>
+        
+        <nav class="headB">
+            <ul>
+                <li><a href="index.html">TOP</a></li>
+                <li><a href="contents.html">콘텐츠</a></li>
+                <li><a href="about.html">소개</a></li>
+                <li><a href="contact.html">문의</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 <section class="conA">
     <div class="container">
         <img src="img/logo.svg" alt="">
