add the contents with different style

--- a/list-b.html
+++ b/list-b.html
@@ -58,7 +58,7 @@ $(function(){
     </div>   
 </section>
 
-<section class="listA">
+<section class="listB">
     <h1 class="sr-only">RECENT POSTS</h1>
     <div class="container">
         <article>
