--- a/list-c.html
+++ b/list-c.html
@@ -58,7 +58,7 @@ $(function(){
     </div>   
 </section>
 
-<section class="listA">
+<section class="listC">
     <h1 class="sr-only">RECENT POSTS</h1>
     <div class="container">
         <article>
